--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'com.computeralchemist'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'war'
 
 sourceCompatibility = 1.8
 
@@ -34,6 +35,12 @@ dependencies {
 }
 
 dependencies {
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.4'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.4'
+}
+
+dependencies {
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '8.5.27'
     compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.27'
@@ -49,5 +56,6 @@ dependencies {
 
 dependencies {
     compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.8.Final'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.9-rc'
+    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '2.0.5.RELEASE'
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.3'
 }
