--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-
     testCompile group: 'org.springframework', name: 'spring-test', version: '5.0.4.RELEASE'
 }
 
@@ -37,6 +36,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.4'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.4'
+    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
 }
 
 dependencies {
