--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,52 @@
-group 'com.computeralchemist'
-version '1.0-SNAPSHOT'
+buildscript {
+	ext {
+		springBootVersion = '2.0.1.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
+}
 
 apply plugin: 'java'
-apply plugin: 'war'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
+group = 'com.computer-alchemist'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+	mavenCentral()
+	maven { url "https://repo.spring.io/milestone" }
+}
+
+
+ext {
+	springCloudVersion = 'Finchley.M9'
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    testCompile group: 'org.springframework', name: 'spring-test', version: '5.0.4.RELEASE'
-    //testCompile group: "de.flapdoodle.embed", name: "de.flapdoodle.embed.mongo", version: "2.0.1"
+	compile('org.springframework.boot:spring-boot-starter-aop')
+	compile('org.springframework.boot:spring-boot-starter-cache')
+	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
+	compile('org.springframework.boot:spring-boot-starter-data-rest')
+	compile('org.springframework.boot:spring-boot-starter-hateoas')
+	compile('org.springframework.boot:spring-boot-starter-validation')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-websocket')
+	compile('org.springframework.session:spring-session-core')
+	compileOnly('org.projectlombok:lombok')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+	testCompile('org.springframework.security:spring-security-test')
 }
 
-dependencies {
-    compile group: 'org.springframework', name: 'spring-context', version: '5.0.4.RELEASE'
-    compile group: 'org.springframework', name: 'spring-web', version: '5.0.4.RELEASE'
-    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.0.4.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.0.4.RELEASE'
-    compile group: 'org.springframework', name: 'spring-expression', version: '5.0.4.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.0.3.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.0.3.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.0.3.RELEASE'
-}
-
-dependencies {
-    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.13'
-    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.13'
-}
-
-dependencies {
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.4'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.4'
-    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
-}
-
-dependencies {
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
-    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '8.5.27'
-    compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.27'
-    compile group: 'org.glassfish', name: 'javax.el', version: '3.0.0'
-}
-
-dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-}
-
-dependencies {
-    compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.8.Final'
-    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '2.0.5.RELEASE'
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.3'
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
