--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 	testCompile('org.springframework.security:spring-security-test')
 }
 
+dependencies {
+	testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+}
+
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
