--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,22 @@ buildscript {
 	}
 }
 
+buildscript {
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
+  dependencies {
+    classpath "io.franzbecker:gradle-lombok:1.13"
+  }
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "io.franzbecker.gradle-lombok"
 
 group = 'com.computer-alchemist'
 version = '0.1'
