--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 	compile('org.springframework.session:spring-session-core')
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	compileOnly('org.projectlombok:lombok')
+	compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.10.Final'
+	compile group: 'org.hibernate.validator', name: 'hibernate-validator-annotation-processor', version: '6.0.10.Final'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
 	testCompile('org.springframework.security:spring-security-test')
